# rag-eval-harness

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
data/: questions.jsonl
rag_eval/: api.py  cache.py  cli.py  config.py  data.py  evaluator.py  store.py
tests/: test_evaluator.py  test_store.py
